2008-02-03  Ralf Angeli  <angeli@caeruleus.net>

	* Relicense all "GPLv2 or later" files to "GPLv3 or later".

	* COPYING: Switch to GPLv3.

	* preview/Makefile.in, preview/configure.ac,
	preview/preview-latex.spec, preview/latex/Makefile.in: Add
	copyright and license notices.

2007-04-29  Ralf Angeli  <angeli@caeruleus.net>

	* preview.el (preview-parse-messages): Match any closing
	parenthesis.

2007-03-25  David Kastrup  <dak@gnu.org>

	* prv-xemacs.el (preview-dump-threshold):

	* prv-emacs.el (preview-dump-threshold): Make the dump threshold
	closely match what mylatex.ltx expects.

	* latex/preview.dtx: Have the counter output appear before the
	snippet start/end messages in order to have the counter
	maintenance work out correctly regardless of the order of `auctex'
	and `counters' options to preview.el.

2007-02-09  Masayuki Ataka  <masayuki.ataka@gmail.com>

	* preview.el (preview-report-bug): Use `AUCTeX-version' instead of
	`AUC-TeX-version'.  Reported by Ikumi Keita <ikumi@ikumi.que.jp>.

2007-01-12  Ralf Angeli  <angeli@caeruleus.net>

	* configure.ac: Bump version number.

2006-12-01  David Kastrup  <dak@gnu.org>

	* prv-emacs.el (preview-move-point): Do not error out if
	`distance' is nil.

	* prv-xemacs.el (preview-supports-image-type): Move so that the
	following comment makes sense.

2006-12-01  Ralf Angeli  <angeli@caeruleus.net>

	* prv-xemacs.el (preview-move-point): Do not error out if
	`distance' is nil.

2006-10-24  David Kastrup  <dak@gnu.org>

	* prv-xemacs.el (preview-move-point): rearrange for calling
	`preview-auto-reveal' with DISTANCE argument.

	* prv-emacs.el (preview-remove-urgentization): Small optimization.
	(preview-move-point): Rearrange to be more efficient in the
	absence of overlays.

	* preview.el (preview-auto-reveal): Fetch keybindings of [left]
	and [right] at runtime.  Change proposed default accordingly.
	(preview-at-point): Fix change from 2005-03-15 for cursor
	restoration.